fixed saving statistics, now they can be opened in excel